--- a/examples/invaders/public/index.html
+++ b/examples/invaders/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>Phaser Game</title>
+    <title>Invaders</title>
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="/build/bundle.css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="build/bundle.css" />
 
-    <script defer src="/build/bundle.js"></script>
+    <script defer src="build/bundle.js"></script>
   </head>
 
   <body></body>
