--- a/examples/platformer/public/index.html
+++ b/examples/platformer/public/index.html
@@ -7,9 +7,7 @@
     <title>Platformer</title>
 
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="build/bundle.css" />
-
-    <script defer src="build/bundle.js"></script>
+    <script type="module" src="/dist/index.js"></script>
   </head>
 
   <body></body>
